Correct z-index of freeze form layer

--- a/custom.css
+++ b/custom.css
@@ -86,6 +86,7 @@
   width: 100%;
   height: 100%;
   background: rgba(255, 255, 255, 0.85);
+  z-index: 999;
 }
 .freeze .fa {
   font-size: 3.0em;
